apps/mobile/.turbo/turbo-dev.log

> @repo/mobile@1.0.0 dev C:\Users\brook\Capstone_Project\apps\mobile
> expo start -c

env: load .env
env: export EXPO_PUBLIC_SUPABASE_URL EXPO_PUBLIC_SUPABASE_ANON_KEY
Starting project at C:\Users\brook\Capstone_Project\apps\mobile
Starting Metro Bundler
warning: Bundler cache is empty, rebuilding (this may take a minute)
The following packages should be updated for best compatibility with the installed expo version:
  @react-native-picker/picker@2.11.4 - expected version: 2.11.1
  expo@54.0.25 - expected version: ~54.0.33
Waiting on http://localhost:8081
  expo-blur@15.0.7 - expected version: ~15.0.8
  expo-constants@18.0.10 - expected version: ~18.0.13
Logs for your project will appear below.
  expo-document-picker@14.0.7 - expected version: ~14.0.8
  expo-font@14.0.9 - expected version: ~14.0.11
  expo-image-picker@17.0.8 - expected version: ~17.0.10
  expo-linking@8.0.9 - expected version: ~8.0.11
  expo-router@6.0.15 - expected version: ~6.0.23
  expo-splash-screen@31.0.11 - expected version: ~31.0.13
  expo-status-bar@3.0.8 - expected version: ~3.0.9
  expo-web-browser@15.0.9 - expected version: ~15.0.10
Your project may not work correctly until you install the expected versions of the packages.
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ▓▓▓▓░░░░░░░░░░░░ 25.0% ( 5/10)
λ node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\node\render.js ░░░░░░░░░░░░░░░░  4.0% (2/3)
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
| [baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ▓▓▓▓░░░░░░░░░░░░ 25.0% ( 9/21)
λ node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\node\render.js ▓░░░░░░░░░░░░░░░ 11.5% ( 89/262)
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ▓▓▓▓░░░░░░░░░░░░ 30.9% (20/36)
λ node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\node\render.js ▓▓▓▓▓▓▓▓▓░░░░░░░ 57.3% (386/510)
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ▓▓▓▓░░░░░░░░░░░░ 30.9% (164/347)
λ node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\node\render.js ▓▓▓▓▓▓▓▓▓▓▓░░░░░ 68.9% (584/715)
| Dynamic import at line 89: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 135: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 43: require(s). This module may not work as intended when deployed to a runtime.
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ▓▓▓▓▓▓▓░░░░░░░░░ 46.1% (370/545)
λ node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\node\render.js ▓▓▓▓▓▓▓▓▓▓▓▓▓░░░ 84.5% (741/808)
| Dynamic import at line 11: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 22: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 20: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 38: require(s). This module may not work as intended when deployed to a runtime.
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓░░░ 82.1% (734/810)
λ node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\node\render.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░ 92.0% (913/954)
λ Bundling failed 22665ms node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\node\render.js (958 modules)

Metro error: SyntaxError: C:\Users\brook\Capstone_Project\apps\mobile\app\context\tasks.tsx: Unexpected token (308:3)

[0m [90m 306 |[39m       }
 [90m 307 |[39m     })()[33m;[39m
[31m[1m>[22m[39m[90m 308 |[39m   }[33m,[39m [tasks])[33m;[39m
 [90m     |[39m    [31m[1m^[22m[39m
 [90m 309 |[39m
 [90m 310 |[39m   [36mconst[39m deleteTask [33m=[39m useCallback((id[33m:[39m string) [33m=>[39m {
 [90m 311 |[39m     [36mvoid[39m ([36masync[39m () [33m=>[39m {[0m

Call Stack
  <unknown> (app\context\tasks.tsx)
Web node_modules\.pnpm\expo-router@6.0.15_3awdxtgp2dkhg4zqbmzsygaoly\node_modules\expo-router\entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 98.7% (949/955)
